add item validator